# UTL

./: .gitattributes  .gitconfig  CMakeLists.txt  build.py  tester.hpp
diagnostics/: logging.hpp
diagnostics/logging/: args.hpp  channels.hpp  writers.hpp
diagnostics/logging/channels/: InterThreadChannels.hpp  WebChannels.hpp
diagnostics/logging/formatters/: DummyFormatters.hpp  PlainTextFormatters.hpp
diagnostics/logging/internal/: DebuggingMacros.hpp  LocklessCircularAllocator.hpp  LocklessQueue.hpp
diagnostics/tests/: main.cpp
global/: allocation.cpp  allocation.hpp  env.hpp  macros.hpp  requirements.hpp
introspection/: StructFields.hpp  bitfields.hpp
introspection/tests/: StructFields.cpp
io/: CircularBuffer.hpp  CircularBufferOnSharedMemory.hpp  NamedPipe.hpp  Reader.hpp  RollingFileWriter.hpp  SharedMemoryRegion.hpp  StdStreamWriter.hpp  Writer.hpp
io/tests/: StdStreamWriter.cpp  main.cpp
threading/: Spinlock.cpp  Spinlock.hpp
